--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".account.LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:exported="true"
+            >
 
         </activity>
 
