--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
+
     compile project(':httpknife')
 }
