--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
-
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile project(':httpknife')
 }
