--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".account.LoginActivity"
+            android:name=".ui.activity.LoginActivity"
             android:exported="true"
             android:label="@string/app_name" >
         </activity>
