--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,12 +38,14 @@
 
         <activity
             android:name=".ui.activity.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".ui.activity.UserInfoActivity"
@@ -60,6 +62,10 @@
         <activity
             android:name=".ui.activity.FileTreeActivity"
             android:label="@string/title_activity_file_tree" >
+
+
+
+
         </activity>
     </application>
 
