--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.quinn.githubknife" >
+    package="com.quinn.githubknife"
+    android:versionCode="1"
+    android:versionName="0.5"
+    >
 
     <!-- client -->
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
@@ -64,6 +67,10 @@
         <activity
             android:name=".ui.activity.CodeActivity"
             android:label="@string/title_activity_code" >
+        </activity>
+        <activity
+            android:name=".ui.activity.AboutActivity"
+            android:label="@string/title_activity_about" >
         </activity>
     </application>
 
