--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.quinn.githubknife"
-    android:versionCode="1"
-    android:versionName="0.5" >
+    android:versionCode="2"
+    android:versionName="0.6" >
 
     <!-- client -->
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
@@ -22,7 +22,7 @@
         <activity
             android:name=".ui.activity.LoginActivity"
             android:exported="true"
-            android:label="@string/app_name" >
+            android:label="@string/title_activity_login" >
         </activity>
 
         <service
