--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
+    compile 'com.afollestad:material-dialogs:0.7.8.1'
     compile project(':httpknife')
     compile project(':iconlibrary')
     compile project(':breadcrumbs')
