--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 23
     buildToolsVersion "23.0.0 rc2"
 
     defaultConfig {
@@ -33,9 +33,11 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.afollestad:material-dialogs:0.7.8.1'
+    compile 'com.miguelcatalan:materialsearchview:1.2.0'
     compile project(':httpknife')
     compile project(':iconlibrary')
     compile project(':breadcrumbs')
+    compile project(':MaterialSearch')
 }
 
 
