--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,9 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.afollestad:material-dialogs:0.7.8.1'
-    compile 'com.miguelcatalan:materialsearchview:1.2.0'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+
     compile project(':httpknife')
     compile project(':iconlibrary')
     compile project(':breadcrumbs')
