--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,17 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:recyclerview-v7:23.3.0'
+
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.afollestad:material-dialogs:0.7.8.1'
+    compile 'com.jaeger.statusbaruitl:library:1.0.0'
+
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
 
     compile project(':httpknife')
     compile project(':iconlibrary')
