parse trending html

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
 
+    compile 'org.jsoup:jsoup:1.9.2'
+
     compile project(':httpknife')
     compile project(':iconlibrary')
     compile project(':breadcrumbs')
