--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.0 rc2"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.quinn.githubknife"
@@ -33,7 +33,7 @@ dependencies {
 
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
-    compile 'com.afollestad:material-dialogs:0.7.8.1'
+    compile 'com.afollestad.material-dialogs:core:0.9.0.2'
     compile 'com.jaeger.statusbaruitl:library:1.0.0'
 
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
