--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':httpknife', ':iconlibrary', ':breadcrumbs', 'MaterialSearch'
+include ':app', ':httpknife', ':iconlibrary', ':breadcrumbs', 'MaterialSearch', ':MaterialSearch'
