--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,20 +2,25 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    buildToolsVersion "24.0.1"
 
     defaultConfig {
         applicationId "com.quinn.githubknife"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 6
-        versionName "1.1"
+        versionCode 102
+        versionName "2.0"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    lintOptions{
+        checkReleaseBuilds false
+        abortOnError false
     }
 
 
