--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.quinn.githubknife"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 102
-        versionName "2.0"
+        versionCode 123
+        versionName "2.3"
     }
     buildTypes {
         release {
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:palette-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
@@ -35,25 +35,22 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.jakewharton:butterknife:7.0.1'
-
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.afollestad.material-dialogs:core:0.9.0.2'
     compile 'com.jaeger.statusbaruitl:library:1.0.0'
-
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
-
     compile 'org.jsoup:jsoup:1.9.2'
-
     compile project(':httpknife')
     compile project(':iconlibrary')
     compile project(':breadcrumbs')
     compile project(':MaterialSearch')
     compile files('libs/TalkingDataAnalytics_V2.0.4.jar')
+    compile files('libs/libammsdk.jar')
 }
 
 
